<?xml version="1.0"?>
<package format="3">
  <name>system_stats</name>
  <version>0.0.0</version>
  <description>The system_stats package</description>
  <maintainer email="asaba@andrew.cmu.edu">Andrew Saba</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>diagnostic_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
